dataset1235/2025-2/1153765216/users/4118477972/executions/2747719322_2383239197.log
== SUBMISSION (2025-08-21 19:47:01)
-- CODE: 
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = sqrt(a**2 +b**2 -2*a*b*cos(y))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a**2 +b**2 -2*a*b*cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a**2 +b**2 -2*a*b*cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a**2 +b**2 -2*a*b*cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a**2 +b**2 -2*a*b*cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a**2 +b**2 -2*a*b*cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a**2 +b**2 -2*a*b*cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 13:57:06)
-- CODE: 
import math
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * math.cos (y))
print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:111.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:25.64
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:22.55
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:1.94
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:56.82
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:17.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 14:00:37)
-- CODE: 
import math
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = math.radians(float(input("digite o angulo:")))
c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * math.cos (y))
print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
digite a distancia a:digite a distancia b:digite o angulo:9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 13:56:15)
-- CODE: 
import math
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * math.cos (y))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(c, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(c, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(c, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(c, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(c, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(c, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:50:26)
-- CODE: 
import math
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
                                                ^^^
NameError: name 'cos' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
                                                ^^^
NameError: name 'cos' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
                                                ^^^
NameError: name 'cos' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
                                                ^^^
NameError: name 'cos' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
                                                ^^^
NameError: name 'cos' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
                                                ^^^
NameError: name 'cos' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:45:34)
-- CODE: 
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y)))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 4
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y)))
            ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 4
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y)))
            ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 4
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y)))
            ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 4
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y)))
            ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 4
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y)))
            ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 4
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y)))
            ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:48:00)
-- CODE: 
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:52:16)
-- CODE: 
import math
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b *cos (y))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b *cos (y))
                                               ^^^
NameError: name 'cos' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b *cos (y))
                                               ^^^
NameError: name 'cos' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b *cos (y))
                                               ^^^
NameError: name 'cos' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b *cos (y))
                                               ^^^
NameError: name 'cos' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b *cos (y))
                                               ^^^
NameError: name 'cos' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b *cos (y))
                                               ^^^
NameError: name 'cos' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:52:34)
-- CODE: 
import math
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos (y))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos (y))
                                                ^^^
NameError: name 'cos' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos (y))
                                                ^^^
NameError: name 'cos' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos (y))
                                                ^^^
NameError: name 'cos' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos (y))
                                                ^^^
NameError: name 'cos' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos (y))
                                                ^^^
NameError: name 'cos' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cos (y))
                                                ^^^
NameError: name 'cos' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:49:05)
-- CODE: 
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 - 2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:47:57)
-- CODE: 
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 13:56:52)
-- CODE: 
import math
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * math.cos (y))
print(roundd(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roundd(c, 2))
          ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roundd(c, 2))
          ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roundd(c, 2))
          ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roundd(c, 2))
          ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roundd(c, 2))
          ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roundd(c, 2))
          ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:47:58)
-- CODE: 
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt(a ** 2 + b ** 2 -2 * a * b * cos(y))
        ^^^^
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:51:00)
-- CODE: 
import math
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cosy)
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cosy)
                                                ^^^^
NameError: name 'cosy' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cosy)
                                                ^^^^
NameError: name 'cosy' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cosy)
                                                ^^^^
NameError: name 'cosy' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cosy)
                                                ^^^^
NameError: name 'cosy' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cosy)
                                                ^^^^
NameError: name 'cosy' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt(a ** 2 + b ** 2 - 2 * a * b * cosy)
                                                ^^^^
NameError: name 'cosy' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:45:59)
-- CODE: 
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y))))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y))))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y))))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y))))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y))))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y))))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) (-2*a*b*(cos(y))))
        ^^^^
NameError: name 'sqrt' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:44:15)
-- CODE: 
a = float(input("digite a distancia a:"))
b = float(input("digite a distancia b:"))
y = float(input("digite o angulo:"))
c = sqrt((a**2) +(b**2) -2*a*b*(cos(y)))
print(roud(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) -2*a*b*(cos(y)))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) -2*a*b*(cos(y)))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) -2*a*b*(cos(y)))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) -2*a*b*(cos(y)))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) -2*a*b*(cos(y)))
        ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = sqrt((a**2) +(b**2) -2*a*b*(cos(y)))
        ^^^^
NameError: name 'sqrt' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
